Cambios para poder ejecutar el código
He ajustado el main para que funcionen las importaciones al cambiar la estructura del repo

--- a/Main_Harry_Potter.ipynb
+++ b/Main_Harry_Potter.ipynb
@@ -16,7 +16,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtener la ruta al directorio actual donde está el script principal\n",
+    "current_path = os.getcwd()\n",
+    "\n",
+    "# Construir la ruta a la carpeta \"scripts\"\n",
+    "scripts_path = os.path.join(current_path, 'src', 'utils')\n",
+    "\n",
+    "# Añadir la carpeta \"scripts\" al sistema de búsqueda de módulos\n",
+    "sys.path.append(scripts_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,17 +66,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# CARGAMOS EL DATASET\n",
-    "df_orig = pd.read_csv('./data/Characters_Harry_Potter.csv', sep = \";\")"
+    "df_orig = pd.read_csv('./src/data/Characters_Harry_Potter.csv', sep = \";\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
