--- a/Main_Harry_Potter.ipynb
+++ b/Main_Harry_Potter.ipynb
@@ -2162,7 +2162,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "+ Faltan la gran mayoría de los datos en esta columna, posiblemente dado que no es un dato tan relevante.\n",
+    "+ De los datos conocidos, la proporción de colores está más o menos distribuida entre el negro, el marrón y el pelirrojo."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2194,7 +2197,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "+ Faltan la gran mayoría de los datos en esta columna, posiblemente dado que no es un dato tan relevante.\n",
+    "+ De los datos conocidos, la mayor proporción de color de ojos es el marrón, representado un 21% del total de los datos."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2226,7 +2232,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "+ En este caso si considero que la columna lealtad es importante, pero al tratarse de una película pues se le da más peso al desarrollo de los personajes principales.\n",
+    "+ De los datos que se conocen, hay una clara mayoría entre los que son leales a Hogwarts y los que son leales a la Orden del Fénix (leales a Dumbeldore)."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2234,6 +2243,35 @@
    "source": [
     "### Análisis bivariante"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
