--- a/Main_Harry_Potter.ipynb
+++ b/Main_Harry_Potter.ipynb
@@ -2611,7 +2611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se observa una mayor proporción de hombres que de mujeres expecto en los muggle, donde hay un 10% mas de mujeres que de hombres."
+    "Se observa una mayor proporción de hombres que de mujeres excepto en los muggle, donde hay un 10% más de mujeres que de hombres."
    ]
   },
   {
@@ -2680,7 +2680,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los personajes con ojos verdes están asociados principalmente a sangre mestiza, mientras que los ojos marrones son comunes en todas las categorías de sangre."
+    "+ Los personajes con ojos verdes están asociados principalmente a sangre mestiza\n",
+    "+ Los sangre pura muestran una distribución más equitativa entre tres colores, azul, marron y gris.\n",
+    "+ Los no mágicos(muggle) tienen una mayor proporción de ojos marrones."
    ]
   },
   {
@@ -2818,8 +2820,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La mayoría de mujeres son leales a Howgarts.\n",
-    "La mayoría de hombres son leales a la Orden del Fenix."
+    "+ La mayoría de mujeres son leales a Howgarts.\n",
+    "+ La mayoría de hombres son leales a la Orden del Fenix."
    ]
   },
   {
